MVC intro added

--- a/S1/E1/intro.html
+++ b/S1/E1/intro.html
@@ -31,7 +31,7 @@
 
         <ul>
             <li>
-                آشنایی با معماری MVC و مزایا و معایب آن
+                آشنایی با معماری MVC و مزایا
             </li>
             <li>
                 پیاده سازی معماری MVC بصورت ابتدایی با استفاده از PHP
