Some small changes.

--- a/S1/E1/intro.html
+++ b/S1/E1/intro.html
@@ -23,7 +23,26 @@
             <span class="effective">مدرس: </span><span>پویا مظفرمقام</span>
         </div>
     </div>
-    <div id="mvc" class="step" data-z="-500" data-y="500">
+    <div class="step" data-z="-500" data-y="500">
+        <h1 class="head">
+            پیش نیازهای دوره
+        </h1>
+        <ul>
+            <li>
+                آشنایی ابتدایی با HTML & CSS
+            </li>
+            <li>
+                آشنایی ابتدایی با JS & jQuery
+            </li>
+            <li>
+                آشنایی کامل با PHP مخصوصا بخش شی گرایی
+            </li>
+            <li>
+                آشنایی با ویژگی های جدید PHP در نسخه 7(اختیاری)
+            </li>
+        </ul>
+    </div>
+    <div id="mvc" class="step" data-z="-1000" data-y="1000">
 
         <h1 class="head">
             معماری MVC
@@ -39,7 +58,7 @@
         </ul>
 
     </div>
-    <div class="step" id="getInLaravel" data-z="-10000" data-rotate="360" data-y="500" data-x="0">
+    <div class="step" id="getInLaravel" data-z="-10000" data-rotate="360" data-y="1000" data-x="0">
         <h1 class="big effective center">
             پیش به سوی لاراول
         </h1>
