some new sections has been made

--- a/S1/E1/intro.html
+++ b/S1/E1/intro.html
@@ -22,6 +22,9 @@
         <div class="center">
             <span class="effective">مدرس: </span><span>پویا مظفرمقام</span>
         </div>
+        <div class="center">
+            <span class="effective">Otedia.com</span>
+        </div>
     </div>
     <div class="step" data-z="-500" data-y="500">
         <h1 class="head">
@@ -32,7 +35,7 @@
                 آشنایی ابتدایی با HTML & CSS
             </li>
             <li>
-                آشنایی ابتدایی با JS & jQuery
+                آشنایی ابتدایی با JS
             </li>
             <li>
                 آشنایی کامل با PHP مخصوصا بخش شی گرایی
@@ -109,10 +112,10 @@
                 نصب و ستاپ دیتابیس روی لاراول
             </li>
             <li>
-                معرفی migration
+                معرفی Migration
             </li>
             <li>
-                معرفی و استفاده از seeder
+                معرفی و استفاده از Seeder
             </li>
             <li>
                 انتقال دیتا به View ها
@@ -124,7 +127,7 @@
                 معرفی و استفاده از Eloquent
             </li>
             <li>
-                معرفی   eloquent Mutator & accessor
+                معرفی   eloquent Mutator & Accessor
             </li>
             <li>
                 معرفی Controller ها
@@ -161,19 +164,16 @@
                 آشنایی با MiddleWare ها
             </li>
             <li>
-                معرفی migration
-            </li>
-            <li>
                 معرفی و استفاده از User Authentication در لاراول
             </li>
             <li>
                 نحوه ارسال ایمیل در لاراول
             </li>
             <li>
-                معرفی پکیج و استفاده از پکیج htmlPurifier و پکیج تبدیل شمسی به میلادی
+                معرفی پکیج و استفاده از پکیج HTMLPurifier و پکیج تبدیل شمسی به میلادی
             </li>
             <li>
-                آشنایی با session و flash message ها
+                آشنایی با Session و Flash message ها
             </li>
             <li>
                معرفی و نحوه آپلود فایل در لاراول
